--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 *{
     margin: 0;
     padding: 0;
@@ -275,6 +276,15 @@ html, body{
     margin-bottom: 1.5vw;
 }
 
+.fleftlm a{
+    text-decoration: none;
+    color: #2d396d;
+}
+
+.fleftlm a:hover {
+    color: #606ea8;
+}
+
 .fleftlm h3{
     font-size: 1.3vw;
     font-weight: 400
@@ -502,3 +512,5 @@ html, body{
     font-size: 11px;
     font-weight: 300;
 }
+
+
