--- a/style.css
+++ b/style.css
@@ -743,6 +743,7 @@ body {
         width: 100%;
         padding: 55vw 17vw;
         margin-bottom: 90.2vw;
+        margin-top: -14.8vw;
     }
                 
 
